array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  val res : Int = 0
  for (compteur <- 1 to num.length) {
    val aux : Boolean = true
    for (compteur1 <-1 to num.length) {
      if (compteur1>compteur){
      if (num[compteur]>num[compteur1]){aux=false}
        if ((num[compteur]==num[compteur1]) && aux) {res = res + 1}}
    }
  }
}